--- a/localline/src/App.css
+++ b/localline/src/App.css
@@ -1,20 +1,22 @@
 .App {
   text-align: center;
+  background-color: #f1f1f1;
 }
+
+
 
 .flex-container {
   display: flex;
-  background-color: #f1f1f1;
+  background-color: #ffffff; 
   margin: 1.0rem;
   border-radius: 0.3rem;
+  flex-direction: column;
+  border: 2px solid silver;
+  overflow: hidden;
 }
 
+
 .flex-container > div {
-  background-color: DodgerBlue;
-  color: white;
-  width: 100px;
-  margin: 10px;
-  text-align: center;
-  line-height: 75px;
-  font-size: 30px;
+  color: #4e4b4b;
+  text-align: left;
 }
